# qricambi-api-connector

./: README.md  pyproject.toml
qricambi/: __init__.py  client.py  exceptions.py  models.py
tests/: test_client.py
